# polyvar-hello-world

./: ChangeLog.md  README.md  polyvar-hello-world.cabal
app/: Main.hs
src/: HelloSomething.hs
tst/unit/: HelloSomethingSpec.hs
