name:                polyvar-hello-world
version:             0.1.0.0
synopsis:            A polyvariadic "Hello World", using Cabal and Stack.
description:         Just a simple Haskell "Hello World" using homemade
                     polyvariadic function.
homepage:            https://github.com/hnrck/polyvar-hello-world
bug-reports:         https://github.com/hnrck/polyvar-hello-world/issues
license:             MIT
license-file:        LICENSE
author:              Henrick Deschamps
maintainer:          Henrick Deschamps <henrick.deschamps@gmail.com>
copyright:           2018, Henrick Deschamps
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable HaskellPlayground
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, polyvar-hello-world
  hs-source-dirs:      app
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     HelloSomething
  -- other-modules:
  build-depends:       base
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       HelloSomethingSpec
  hs-source-dirs:      tst/unit
  build-depends:       base
                     , polyvar-hello-world
                     , hspec
                     , hspec-discover
  default-language:    Haskell2010
